2005-03-24	Gaius Mulley <gaius@glam.ac.uk>

	* included the keyword MODULE as an stop set element
	  in gm2m and gm2l.

2005-03-15	Gaius Mulley <gaius@glam.ac.uk>

	* GM2 Release 0.44
	* tagged CVS using gm2_0_44

2005-03-14	Gaius Mulley <gaius@glam.ac.uk>

	* finished tools-src/createUlSys which builds a SYSTEM.c
	  (from ./configure results) ULM library compatible interface.
	* modified Make-lang.in to install the ULM libraries.
	* added new switch -Wulm which modifies the default search
	  path so that the ULM libraries are included.
	
2005-01-05	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug reported by john o goyo <jgoyo@ca.inter.net>.
	  (testsuite/gm2/pim/run/pass/Countdown.mod)
	* for loops are now implemented as per ISO description.
	  GNU Modula-2 now calculates the last iteration value
	  before the start of a loop. It then initializes the
	  iteration value and works towards the final value,
	  rather than testing to see whether the iteration value
	  exceeds or preceeds the limit value (this fails when using
	  a CARDINAL iterator and stopping at 0).
	* added a number of run tests to exercise these changes.
	
2004-12-22	Gaius Mulley <gaius@glam.ac.uk>

	* more fixes to enable to the Z type to work.
	* introduced GetM2ZRealType which maps onto the largest
	  real type tree.
	* 24 regression test failures out of 2148 on the Opteron LP64
	  9 fail within ulm libraries (Procedure/Module scope nesting).
	  15 fail with ISO import/export of enumeration types.
	* exactly the same regression test failures on 32 bit i386
	  implementation.
	* fixed regression test path, all tests are build and run
	  using gm2-harness-0.3
	
2004-11-29	Gaius Mulley <gaius@glam.ac.uk>

	* internal changes to ordinal type which now use the Z
	  type (long_long_int) for internal calculations before
	  being converted into the actual ordinal type at assignment
	  to a variable or procedure parameter or return value.
	* works on a 32 bit i386 but fails on the Opteron LP64 model.
	