@@ -1,3 +1,7 @@
+2005-04-11	Gaius Mulley <gaius@glam.ac.uk>
+
+	* fixed examples/executive
+
 2005-03-24	Gaius Mulley <gaius@glam.ac.uk>
 
 	* included the keyword MODULE as an stop set element
